[project]
name = "pa325"
version = "0.1.0"
description = "A data exploration toolkit for salinity in the Lower Rio Grande"
authors = [{ name = "Benjamin Maccini", email = "benjaminmaccini@gmail.com" }]
dependencies = [
    "jupyter>=1.1.1",
    "black>=24.10.0",
    "scipy>=1.14.1",
    "numpy>=2.1.2",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "pandas>=2.2.3",
    "pyqt6>=6.7.1",
    "nbconvert>=7.16.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/data_exploration"]

[tool.pyright]
venvPath = "."
venv = ".venv"
